[project]
name = "nf_ndc_connect_public"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "dhilipsiva", email = "dhilipsiva@pm.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
features = ["python"]
